objects/CMPL123CME__EMDR_Layout_Config__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Behavior__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Behavior (Open in a same window)</description>
        <inlineHelpText>Behavior (Open in a same window)</inlineHelpText>
        <label>Behavior (Open in a same window)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__FieldSet_API_Name__c</fullName>
        <description>Child/Related Object FieldSet API Name</description>
        <inlineHelpText>Child/Related Object FieldSet API Name</inlineHelpText>
        <label>FieldSet API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uncheck if you want to hide it</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Record_Type__c</fullName>
        <description>Specify Record Type Name(s) with comma separated (Ex: Initial,Supplemental)</description>
        <inlineHelpText>Specify Record Type Name(s) with comma separated (Ex: Initial,Supplemental)</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Related_Api__c</fullName>
        <description>Related Object API</description>
        <inlineHelpText>Specify Related (Child) Object API</inlineHelpText>
        <label>Related Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Show_Related_List_New_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Related List New Button</description>
        <inlineHelpText>Uncheck to hide the Related List New Button</inlineHelpText>
        <label>Show Related List New Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type__c</fullName>
        <description>"Button" or "List"</description>
        <inlineHelpText>Specify "Button" or "List"</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__URL__c</fullName>
        <description>Button URL or Field Id</description>
        <inlineHelpText>Specify Button URL (Ex: for any apex pages start with /apex/&lt;pagename&gt;)
or specify related lookup field Id (normally starts with 00N)</inlineHelpText>
        <label>Button URL / Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>EMDR Layout Button and Related List Settings</description>
    <label>EMDR Layout Config</label>
</CustomObject>